2009-10-15  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-10-13  Martin Jambor  <mjambor@suse.cz>

	* gcc.c-torture/compile/pr41661.c: New test.

	2009-10-12  Jerry DeLisle  <jvdelisle@gcc.gnu.org>

	PR libgfortran/41683
	* gfortran.dg/fmt_error_9.f: Add check for repeat count after P.

	2009-10-12  Dodji Seketeli  <dodji@redhat.com>

	PR c++/41570
	* g++.dg/debug/dwarf2/template-params-7.C: New test.

	2009-10-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41555
	* gcc.dg/torture/pr41555.c: New testcase.

	2009-10-09  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/41634
	* gcc.c-torture/compile/pr41634.c: New testcase.

	2009-10-08  Michael Matz  <matz@suse.de>

	PR middle-end/41573
	* gcc.dg/pr41573.c: New test.

	2009-10-07  Joseph Myers  <joseph@codesourcery.com>

	PR c/41182
	* gcc.c-torture/compile/pr41182-1.c: New.

2009-10-15  Release Manager

	* GCC 4.4.2 released.

2009-10-14  Hans-Peter Nilsson  <hp@axis.com>

	PR target/38948
	* gcc.dg/torture/pr38948.c: New test.

2009-10-12  Hans-Peter Nilsson  <hp@axis.com>

	PR target/26515
	* gcc.dg/torture/pr26515.c: New test.

2009-10-12  Jakub Jelinek  <jakub@redhat.com>

	PR target/41680
	* g++.dg/torture/pr41680.C: New test.

	PR rtl-optimization/41646
	* gcc.c-torture/compile/pr41646.c: New test.

2009-10-07  Jason Merrill  <jason@redhat.com>

	* g++.dg/cpp0x/variadic95.C: New.

	* g++.dg/template/scope3.C: New.

	* g++.dg/cpp0x/defaulted13.C: New.

2009-10-05  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41479
	* gfortran.dg/intent_out_5.f90: New test.

2009-10-01  Tobias Burnus  <burnus@net-b.de>

	PR fortran/41515
	* gfortran.dg/parameter_array_init_5.f90: New test.

2009-09-30  H.J. Lu  <hongjiu.lu@intel.com>

	* gfortran.dg/proc_ptr_comp_21.f90: Removed.

2009-09-30  Uros Bizjak  <ubizjak@gmail.com>

	PR target/22093
	* gcc.target/alpha/pr22093.c: New test.

2009-09-28  Olivier Hainque  <hainque@adacore.com>
